# python-micro-service

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  api_handler.py  compose.yml  migrations_handler.py  pyproject.toml
alembic/: env.py
deployment/docker/local/: Dockerfile
src/: main.py
src/models/: database.py  engine.py
src/util/: logging.py
